--- a/Project_HTML.html
+++ b/Project_HTML.html
@@ -22,6 +22,14 @@
           href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
           type="text/css">
 
+<!-- Map Overlay Search -->
+    <div class = 'map-overlay-search'>
+        <label>Search for location</label>
+        <div id="geocoder" class="geocoder"></div>
+        <button type ="button" class="btn btn-primary btn-sm" id="returnbutton"> Return to full extent</button>
+</div>
+
+
     <!-- Adding the legend using div-->
     <div id='legend' class='legend'>
         <h4>Legend</h4>
