--- a/Project_HTML.html
+++ b/Project_HTML.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <script
+        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script> 
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet'/>
     <link rel="stylesheet" href="Project_Style.css">
+
     <title>Tourism Toronto Map</title>
 </head>
 <body>
@@ -29,6 +33,36 @@
         <button type ="button" class="btn btn-primary btn-sm" id="returnbutton"> Return to full extent</button>
 </div>
 
+<!--checkbox-->
+<pre id="info"></pre>
+<!-- INTERACTIVITY -->
+<div class='map-overlay-data'>
+    <label>Filter map view</label>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="legendcheck">
+        <label class="form-check-label" for="flexCheckDefault">
+            Legend
+        </label>
+
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="layercheck" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+            Layer-Attraction
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="layercheck" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+            Layer-TTC
+        </label>
+    </div>    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="layercheck" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+            Layer-Parks
+        </label>
+    </div>
 
     <!-- Adding the legend using div-->
     <div id='legend' class='legend'>
