--- a/Project_HTML.html
+++ b/Project_HTML.html
@@ -47,23 +47,35 @@
     </div>
 
     <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="layercheck" checked>
+        <input class="form-check-input" type="checkbox" value="" id="Cu_At_Points" checked>
         <label class="form-check-label" for="flexCheckChecked">
             Layer-Attraction
         </label>
     </div>
+
     <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="layercheck" checked>
+        <input class="form-check-input" type="checkbox" value="" id="ttcsubwaylineslayer" checked>
         <label class="form-check-label" for="flexCheckChecked">
-            Layer-TTC
+            Layer-TTC lines
         </label>
-    </div>    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="layercheck" checked>
+    </div>   
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="ttcsubwaystationslayer" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+            Layer-TTC Stations
+        </label>
+    </div>
+     <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="Large-Park" checked>
         <label class="form-check-label" for="flexCheckChecked">
             Layer-Parks
         </label>
     </div>
 
+    <!-- Adding the legend using div-->
+    <div id='legend' class='legend'>
+        <h4>Legend</h4>
+    </div>
 
     <!-- The JavaScript link-->
     <script src="Project_JS.js"></script>
