update java script file and minor changes to other files
add popup features to ttc subway station layer, change the ttc subway lines color to match the official color schemes; also minor changes/updates to legends and relevant css file sections.

--- a/Project_HTML.html
+++ b/Project_HTML.html
@@ -39,7 +39,7 @@
 <div class='map-overlay-data'>
     <label>Filter map view</label>
     <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="legendcheck">
+        <input class="form-check-input" type="checkbox" value="" id="legendcheck" checked>
         <label class="form-check-label" for="flexCheckDefault">
             Legend
         </label>
