--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- BOOTSTRAP AND IT'S CSS STYLING COMPONENTS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <script
-        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+    <!-- MAPBOX GEOCODER API -->
+    <script 
+    src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+<link rel="stylesheet"
+      href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
+      type="text/css">
+    
+    <!-- MAPBOX API -->      
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script> 
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet'/>
+
+    <!-- LINKING CSS STYLE SHEET -->
     <link rel="stylesheet" href="Project_Style.css">
+
+    <!-- TURF.JS LINK -->
+    <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
 
     <title>Tourism Toronto Map</title>
 </head>
@@ -19,14 +31,8 @@
     <!-- Adding the div tag for the map-->
         <div id='cult_attract' class='map'></div>
         
-    <!-- Adding a  geocoder plugin from mapbox-->
-    <script 
-        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
-    <link rel="stylesheet"
-          href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
-          type="text/css">
 
-<!-- Map Overlay Search -->
+    <!-- Map Overlay Search -->
     <div class = 'map-overlay-search'>
         <label>Search for location</label>
         <div id="geocoder" class="geocoder"></div>
@@ -36,6 +42,7 @@
 <!--checkbox-->
 <pre id="info"></pre>
 <!-- INTERACTIVITY -->
+<!-- LEGEND CHECKBOX LAYER-->
 <div class='map-overlay-data'>
     <label>Filter map view</label>
     <div class="form-check">
@@ -43,28 +50,36 @@
         <label class="form-check-label" for="flexCheckDefault">
             Legend
         </label>
-
     </div>
-
+<!-- VORONOI CHECKBOX LAYER -->
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="voron-fill" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+            Layer-Voronoi Polygon
+        </label>
+    </div>
+<!-- ATTRACTION CHECKBOX LAYER -->
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="Cu_At_Points" checked>
         <label class="form-check-label" for="flexCheckChecked">
             Layer-Attraction
         </label>
     </div>
-
+<!-- TTC SUBWAY LINES CHECKBOX LAYER -->
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="ttcsubwaylineslayer" checked>
         <label class="form-check-label" for="flexCheckChecked">
             Layer-TTC lines
         </label>
-    </div>   
+    </div>
+<!-- TTC STATIONS CHECKBOX LAYER -->   
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="ttcsubwaystationslayer" checked>
         <label class="form-check-label" for="flexCheckChecked">
             Layer-TTC Stations
         </label>
     </div>
+<!-- TORONTO PARKS CHECKBOX LAYER -->
      <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="Large-Park" checked>
         <label class="form-check-label" for="flexCheckChecked">
