--- a/Project_HTML.html
+++ b/Project_HTML.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
+     <!-- Turf.js -->
+     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>    
     <script
         src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script> 
@@ -45,7 +47,12 @@
         </label>
 
     </div>
+<!--buff-button-->
+<div class='map-overlay'>
+    <button type="button" class="btn btn-primary btn-sm" id="buffbutton">400m Around Me</button>
+</div>
 
+<!--checkbox-->
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="Cu_At_Points" checked>
         <label class="form-check-label" for="flexCheckChecked">
