--- a/index.html
+++ b/index.html
@@ -60,18 +60,15 @@
     </div>
 <!--Buff LAYER-->
     <div class="form-check">
-   <!--<input class="form-check-input" type="checkbox" value="" id="input-pnts" checked>-->     
         <input class="form-check-input" type="checkbox" value="" id="input-pnts" checked>
         <label class="form-check-label" for="flexCheckChecked">
             Buffer Points
         </label>
     </div>
-
-<!--Buffer Button-->
+<!--Buff Buttom-->
     <div class='map-overlay'>
         <button type="button" class="btn btn-primary btn-sm" id="buffbutton">400m Around Me</button>
     </div>
-    
 <!--DISTANCE LAYER-->
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="distanceptslayer" checked>
