Make the title in center of page

--- a/index.html
+++ b/index.html
@@ -35,47 +35,50 @@
 
 </head>
 
+<header class="heading">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#cult_attract">Map</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#instruction">Instruction</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Group members
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#groupmembers">Who are we</a></li>
+                            <li><a class="dropdown-item" href="#contactus">Leave online comments on Github</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                        </ul>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
 <body>
-    <div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#cult_attract">Map</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#instruction">Instruction</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Group members
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#groupmembers">Who are we</a></li>
-                                <li><a class="dropdown-item" href="#contactus">Leave online comments on Github</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                            </ul>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
+   
     <h1>Toronto Tourism Map</h1>
 
     <div>   
     <img src="https://www.planetware.com/photos-large/CDN/canada-toronto-cn-tower.jpg">
     </div>
 
-    <div id="instruction">
-    <h2>Instruction</h2>
+<div class="full-screen" id="instruction">
+
+    <h1>Instruction</h1>
+
     <h3>
         <p>
             <br> 🌟keep layers checked to see TTC lines and all culture attractions<br>
@@ -102,7 +105,7 @@
 </div>
 
 <div id="map">
-    <h2>Tourism Map-Toronto<br><br><br></h2>
+    <h1>Tourism Map-Toronto<br><br><br></h1>
 </div>
 
 <div class='map' id='cult_attract'>
