Styling for Instruction

--- a/index.html
+++ b/index.html
@@ -72,16 +72,17 @@
     <h1>Toronto Tourism Map</h1>
 
     <div>   
-    <img src="https://www.planetware.com/photos-large/CDN/canada-toronto-cn-tower.jpg">
+    <img src="https://www.planetware.com/photos-large/CDN/canada-toronto-cn-tower.jpg" width="100%" height="100%">
     </div>
+
 
 <div class="full-screen" id="instruction">
 
-    <h1>Instruction</h1>
+    <div><h1><br>Instruction</h1></div>
 
     <h3>
         <p>
-            <br> 🌟keep layers checked to see TTC lines and all culture attractions<br>
+            <br><br> 🌟keep layers checked to see TTC lines and all culture attractions<br>
             <br><strong>For the best user expirence:<br><br>
                 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp🔍Return to full extent before start<br><br>
                 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp🔍Use each layer seperately<br><br>
