--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     <h1>Toronto Tourism Map</h1>
 
     <div>   
-    <img src="https://www.planetware.com/photos-large/CDN/canada-toronto-cn-tower.jpg" width="100%" height="100%">
+    <img src="https://www.planetware.com/photos-large/CDN/canada-toronto-cn-tower.jpg" width="80%" height="80%">
     </div>
 
-
+<p>
 <div class="full-screen" id="instruction">
 
     <div><h1><br>Instruction</h1></div>
@@ -102,9 +102,10 @@
             <br><br><br><br>
     </h3>
 
-</p>
-</div>
 
+</p>
+</div></p>
+<p>
 <div id="map">
     <h1>Tourism Map-Toronto<br><br><br></h1>
 </div>
@@ -205,7 +206,7 @@
 
         </div>
     </div></div>
-</div>
+</div></p>
 
 <div id="groupmembers"  class="full-screen"><p>
     😏Gabyrel Calayan<br>
