--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             🌟Using the search bar to search for a location;<br>
             <br>🌟Keep the Layer-Voronoi Polygon checked, to take a look of the cluster for attractions😊;<br>
             <br>
-            🌟Remember to uncheck every layer that you don't want to use it(it will be erased everytime unchecked);<br>
+            🌟Remember to uncheck every layer that you don't want to use it(this layer will be invisible when unchecked);<br>
             <br>🌟Keep the distance layer checked, and you can see the distance for #2 recently point# that you clicked;<br>
             <br>🌟Keep the button layer checked, click on a location you want,then click the "400m around me" button to see
             attractions within 400m; <br><br>
